Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17623

[MSI] setup should not list read-only VBox-share as install-targets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.14, 0.4.15
    • None
    • None

    Description

      A continuation of CORE-14432

      I thought about how to further stress the patch that we just committed into 0.4.15-dev-2651-g864e20b

      So I abused a VBox-share mounted as "read-only" and looked how ros and 2k3sp2 did behave:

      Expected result
      2K3_SP2_does_hide_readonly_VBoxSharedFolders.png

      Observed result
      but ros does erroneously show such a read-only VBox-share:
      ros_erroneously_shows_driveG.png

      So I thought: Hey, that's the proof that we just have to combine both conditions, the one from Wine with the one from DougLyons, and I tried the following patch
      falseHope.patch

      Unfortunately ros with that patch did still show the VBox share:
      unfortunately_doesNotWork.png

      Attachments

        1. 2K3_SP2_does_hide_readonly_VBoxSharedFolders.png
          34 kB
          reactosfanboy
        2. falseHope.patch
          1 kB
          reactosfanboy
        3. unfortunately_doesNotWork.png
          51 kB
          reactosfanboy
        4. ros_erroneously_shows_driveG.png
          38 kB
          reactosfanboy
        5. msi_no_cdroms_01.patch
          0.5 kB
          DougLyons
        6. MSI_Install_Drives3.png
          155 kB
          DougLyons
        7. MSI_Install_Drives4.png
          116 kB
          DougLyons
        8. MSI_Install_Drives5.png
          100 kB
          DougLyons

        Issue Links

          Activity

            People

              DougLyons DougLyons
              reactosfanboy reactosfanboy
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: