[0.4.14][MSI] Enumerate only type DRIVE_FIXED CORE-17623 (& CORE-14432)

MSI on 2k3sp2 hides empty CD-ROM, and hides CD-ROM with iso mounted.
MSI on 2k3sp2 hides VBox shares, both: writable and read-only-ones.
MSI on 2k3sp2 hides floppy drives with a floppy img mounted.
MSI on XPSP3 hides a mounted writable USB stick.

Thanks to the patches author Doug Lyons.

This patch supersedes
0.4.14-RC-71-g cfc24316a54278c831b4ce805e2c8a1aa5ff75a7 (CORE-14432)
and we are also better than Wines
https://source.winehq.org/git/wine.git/commit/0dd0d879a1c487dcefedd44762d4ea0fcebd98fe

picked from 0.4.15-dev-2704-g d5265b07bbfb6ac6da190b8213cf2f3f8d9cd675